--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6350,3 +6350,30 @@ del {
 .hover-link:hover {
     color: #151313;
 }
+
+.image-container {
+    position: relative;
+    width: 370px;
+    height: 370px;
+}
+
+.view-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.image-container:hover .view-button {
+    display: inline-block;
+    opacity: 1;
+}
